--- a/src/Vaquinha.MVC/Views/Home/Index.cshtml
+++ b/src/Vaquinha.MVC/Views/Home/Index.cshtml
@@ -4,45 +4,67 @@
     ViewData["Title"] = "Vaquinha OnLine DIO";
 }
 
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-    <div class="text-center">
-        <h1>Vaquinha OnLine DIO</h1>
+<div class="text-center">
+    <h1>Vaquinha OnLine DIO</h1>
 
-        <hr />
+    <hr />
 
-        <table class="table table-striped table-bordered">
-            <thead>
-                <tr>
-                    <th>
-                        @Html.DisplayNameFor(model => model.ValorRestanteMeta)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.ValorTotalArrecadado)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.QuantidadeDoadores)
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
+    <table class="table table-striped table-bordered">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.ValorRestanteMeta)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ValorTotalArrecadado)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.QuantidadeDoadores)
+                </th>
+            </tr>
+        </thead>
+        <tbody>
 
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => Model.ValorRestanteMeta)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => Model.ValorTotalArrecadado)
-                    </td>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => Model.ValorRestanteMeta)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => Model.ValorTotalArrecadado)
+                </td>
 
-                    <td>
-                        @Html.DisplayFor(modelItem => Model.QuantidadeDoadores)
-                    </td>
-                </tr>
+                <td>
+                    @Html.DisplayFor(modelItem => Model.QuantidadeDoadores)
+                </td>
+            </tr>
 
-            </tbody>
-        </table>
+        </tbody>
+    </table>
 
-        <hr />
-    </div>
+    <hr />
 
+    <span>VEJA QUEM JÁ DOOU ( adicionar carousel aqui )</span>
+    @foreach (var item in Model.Doadores)
+    {
+        <p>
+            @Html.DisplayFor(a => item.Nome)
+        </p>
+    }
 
+<p>PARA ONDE VAI MINHA DOAÇÃO ( adicionar carousel aqui )</p>
+
+    @foreach (var item in Model.Instituicoes)
+    {
+        <p>
+            @Html.DisplayFor(a => item.Nome)
+        </p>
+    }
+
+</div>
