--- a/src/Vaquinha.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Vaquinha.MVC/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Doadores" asp-action="Index">Doadores</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Instituicoes" asp-action="Index">Instituições</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Causas" asp-action="Index">Causas</a>
                         </li>
                     </ul>
                 </div>
