--- a/src/Vaquinha.MVC/Views/Doacoes/Create.cshtml
+++ b/src/Vaquinha.MVC/Views/Doacoes/Create.cshtml
@@ -4,12 +4,18 @@
     ViewData["Title"] = "Create";
 }
 
-<form asp-action="Create">
+<div class="text-center">
+    <h2>Doe agora</h2>
+
+    <hr />
+</div>
+
+<form asp-action="Create" asp-controller="Doacoes" method="post">
     <div class="row">
         <div class="col-md-6">
 
             <fieldset>
-                <legend>VALOR PARA DOAÇÃO</legend>
+                <legend>Valor para doação</legend>
                 <div class="form-group">
                     <input asp-for="Valor" placeholder="Valor" class="form-control" />
                 </div>
@@ -18,7 +24,7 @@
             <hr>
 
             <fieldset>
-                <legend>DADOS PESSOAIS</legend>
+                <legend>Dados Pessoais</legend>
 
                 <div class="form-group">
                     <input asp-for="DadosPessoais.Nome" placeholder="Nome Completo" class="form-control" />
@@ -29,7 +35,7 @@
                 </div>
 
                 <div class="form-group">
-                    <textarea name="MensagemApoio" asp-for="DadosPessoais.MensagemApoio" class="form-control"
+                    <textarea name="MensagemApoio" asp-for="DadosPessoais.MensagemApoio" class="form-control" rows="6"
                               placeholder="Deixa aqui uma mensagem de apoio" data-val-maxlength-max="5000" data-val="true"></textarea>
                 </div>
 
@@ -43,7 +49,7 @@
         <div class="col-md-6">
 
             <fieldset>
-                <legend>DADOS PARA PAGAMENTO</legend>
+                <legend>Dados para pagamento</legend>
                 <div class="form-group">
                     <input asp-for="FormaPagamento.NumeroCartaoCredito" placeholder="Nome do Titular" class="form-control" />
                 </div>
@@ -52,52 +58,78 @@
                     <input asp-for="FormaPagamento.NumeroCartaoCredito" placeholder="Numero do Cartão" class="form-control" />
                 </div>
 
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <input asp-for="FormaPagamento.Validade" placeholder="Data de validade" class="form-control" />
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <input asp-for="FormaPagamento.Validade" placeholder="Data de validade" class="form-control small" />
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <input asp-for="FormaPagamento.CVV" placeholder="Data de validade" class="form-control small" />
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <input asp-for="FormaPagamento.CVV" placeholder="CVV" class="form-control" />
-                    </div>
-                </div>
+
             </fieldset>
 
             <hr>
 
             <fieldset>
-                <legend>ENDEREÇO DE COBRANÇA</legend>
+                <legend>Endereço de Cobranca</legend>
 
-                <div class="form-group">
-                    <input asp-for="DadosPessoais.Nome" placeholder="Nome Completo" class="form-control" />
+                <div class="row">
+                    <div class="col-md-9">
+                        <div class="form-group">
+                            <input asp-for="EnderecoCobranca.TextoEndereco" placeholder="Endereço" class="form-control small" />
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <input asp-for="EnderecoCobranca.Numero" placeholder="Número" class="form-control small" />
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-8">
+                        <div class="form-group">
+                            <input asp-for="EnderecoCobranca.Cidade" placeholder="Cidade" class="form-control small" />
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <input asp-for="EnderecoCobranca.Estado" placeholder="Estado" class="form-control small" />
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-8">
+                        <div class="form-group">
+                            <input asp-for="EnderecoCobranca.CEP" placeholder="CEP" class="form-control small" />
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <input asp-for="EnderecoCobranca.Complemento" placeholder="Complemento" class="form-control small" />
+                        </div>
+                    </div>
                 </div>
 
                 <div class="form-group">
-                    <input asp-for="DadosPessoais.Email" placeholder="Email" class="form-control" />
-                </div>
-
-                <div class="form-group">
-                    <textarea name="MensagemApoio" asp-for="DadosPessoais.MensagemApoio" class="form-control"
-                              placeholder="Deixa aqui uma mensagem de apoio" data-val-maxlength-max="5000" data-val="true"></textarea>
-                </div>
-
-                <div class="form-group float-right">
-                    <label asp-for="DadosPessoais.Anonima" class="control-label"></label>
-                    <input asp-for="DadosPessoais.Anonima" />
+                    <input asp-for="EnderecoCobranca.Telefone" placeholder="Telefone" class="form-control small" />
                 </div>
 
             </fieldset>
         </div>
     </div>
 
-    <div>
-        <a asp-action="Index">Voltar</a>
-    </div>
 
-
-    @*<div class="form-group">
+    <div class="text-center">
+        <div class="form-group">
             <input type="submit" value="Doar" class="btn btn-primary" />
-        </div>*@
+        </div>
+    </div>
 
 </form>
