--- a/src/Vaquinha.MVC/Views/Doacoes/Create.cshtml
+++ b/src/Vaquinha.MVC/Views/Doacoes/Create.cshtml
@@ -51,7 +51,7 @@
             <fieldset>
                 <legend>Dados para pagamento</legend>
                 <div class="form-group">
-                    <input asp-for="FormaPagamento.NumeroCartaoCredito" placeholder="Nome do Titular" class="form-control" />
+                    <input asp-for="FormaPagamento.NomeTitular" placeholder="Nome do Titular" class="form-control" />
                 </div>
 
                 <div class="form-group">
@@ -66,7 +66,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
-                            <input asp-for="FormaPagamento.CVV" placeholder="Data de validade" class="form-control small" />
+                            <input asp-for="FormaPagamento.CVV" placeholder="CVV" class="form-control small" />
                         </div>
                     </div>
                 </div>
