--- a/src/Vaquinha.MVC/Views/Doacoes/Create.cshtml
+++ b/src/Vaquinha.MVC/Views/Doacoes/Create.cshtml
@@ -35,8 +35,8 @@
                 </div>
 
                 <div class="form-group">
-                    <textarea name="MensagemApoio" asp-for="DadosPessoais.MensagemApoio" class="form-control" rows="6"
-                              placeholder="Deixa aqui uma mensagem de apoio" data-val-maxlength-max="5000" data-val="true"></textarea>
+                    <textarea asp-for="DadosPessoais.MensagemApoio" class="form-control" rows="6"
+                              placeholder="Deixa aqui uma mensagem de apoio" data-val="true"></textarea>
                 </div>
 
                 <div class="form-group float-right">
