adicionado jquery masks

--- a/src/Vaquinha.MVC/Views/Doacoes/Create.cshtml
+++ b/src/Vaquinha.MVC/Views/Doacoes/Create.cshtml
@@ -4,24 +4,27 @@
     ViewData["Title"] = "Create";
 }
 
-<div class="text-center">
-    <h2>Doe agora</h2>
-
-    <hr />
-</div>
 
 <form asp-action="Create" asp-controller="Doacoes" method="post">
+
+    <div class="text-center">
+        <h2>Doe agora</h2>
+
+        <hr />
+        <center>
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label asp-for="Valor" class="control-label"></label>
+                    <input asp-for="Valor" id="valor" placeholder="Valor doação" class="form-control" />
+                </div>
+            </div>
+            <hr />
+        </center>
+
+    </div>
+
     <div class="row">
         <div class="col-md-6">
-
-            <fieldset>
-                <legend>Valor para doação</legend>
-                <div class="form-group">
-                    <input asp-for="Valor" placeholder="Valor" class="form-control" />
-                </div>
-            </fieldset>
-
-            <hr>
 
             <fieldset>
                 <legend>Dados Pessoais</legend>
@@ -35,7 +38,7 @@
                 </div>
 
                 <div class="form-group">
-                    <textarea asp-for="DadosPessoais.MensagemApoio" class="form-control" rows="6"
+                    <textarea asp-for="DadosPessoais.MensagemApoio" class="form-control" rows="3"
                               placeholder="Deixa aqui uma mensagem de apoio" data-val="true"></textarea>
                 </div>
 
@@ -47,33 +50,6 @@
             </fieldset>
         </div>
         <div class="col-md-6">
-
-            <fieldset>
-                <legend>Dados para pagamento</legend>
-                <div class="form-group">
-                    <input asp-for="FormaPagamento.NomeTitular" placeholder="Nome do Titular" class="form-control" />
-                </div>
-
-                <div class="form-group">
-                    <input asp-for="FormaPagamento.NumeroCartaoCredito" placeholder="Numero do Cartão" class="form-control" />
-                </div>
-
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <input asp-for="FormaPagamento.Validade" placeholder="Data de validade" class="form-control small" />
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <input asp-for="FormaPagamento.CVV" placeholder="CVV" class="form-control small" />
-                        </div>
-                    </div>
-                </div>
-
-            </fieldset>
-
-            <hr>
 
             <fieldset>
                 <legend>Endereço de Cobranca</legend>
@@ -107,7 +83,7 @@
                 <div class="row">
                     <div class="col-md-8">
                         <div class="form-group">
-                            <input asp-for="EnderecoCobranca.CEP" placeholder="CEP" class="form-control small" />
+                            <input asp-for="EnderecoCobranca.CEP" id="cep" placeholder="CEP" class="form-control small" />
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -118,11 +94,42 @@
                 </div>
 
                 <div class="form-group">
-                    <input asp-for="EnderecoCobranca.Telefone" placeholder="Telefone" class="form-control small" />
+                    <input asp-for="EnderecoCobranca.Telefone" id="telefone" placeholder="Telefone" class="form-control small" />
                 </div>
 
             </fieldset>
         </div>
+
+        <div class="col-md-3 text-center"></div>
+        <div class="col-md-6 text-center">
+
+            <fieldset>
+                <legend>Dados para pagamento</legend>
+                <div class="form-group">
+                    <input asp-for="FormaPagamento.NomeTitular" placeholder="Nome do Titular" class="form-control" />
+                </div>
+
+                <div class="form-group">
+                    <input asp-for="FormaPagamento.NumeroCartaoCredito" id="cardNumber" placeholder="Numero do Cartão" class="form-control" />
+                </div>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <input asp-for="FormaPagamento.Validade" id="validade" placeholder="Data de validade" class="form-control small" />
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <input asp-for="FormaPagamento.CVV" id="cvv" placeholder="CVV" class="form-control small" />
+                        </div>
+                    </div>
+                </div>
+
+            </fieldset>
+
+        </div>
+        <div class="col-md-3 text-center"></div>
     </div>
 
 
