--- a/src/Vaquinha.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Vaquinha.MVC/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - Vaquinha.MVC</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+
 </head>
 <body>
     <header>
@@ -21,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Doadores" asp-action="Index">Doadores</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Causas" asp-action="Index">Causas</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Doacoes" asp-action="Create">Doar</a>
                         </li>
                     </ul>
                 </div>
@@ -51,7 +52,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
 
     <script src="~/js/jquery.inputmask.bundle.js"></script>
-
     <script src="~/js/masks.js"></script>
 
 </body>
