--- a/src/Vaquinha.MVC/Views/Doacoes/Create.cshtml
+++ b/src/Vaquinha.MVC/Views/Doacoes/Create.cshtml
@@ -24,7 +24,8 @@
     </div>
 
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-1"></div>
+        <div class="col-md-5">
 
             <fieldset>
                 <legend>Dados Pessoais</legend>
@@ -38,7 +39,7 @@
                 </div>
 
                 <div class="form-group">
-                    <textarea asp-for="DadosPessoais.MensagemApoio" class="form-control" rows="3"
+                    <textarea asp-for="DadosPessoais.MensagemApoio" class="form-control" rows="3" maxlength="200"
                               placeholder="Deixa aqui uma mensagem de apoio" data-val="true"></textarea>
                 </div>
 
@@ -49,7 +50,7 @@
 
             </fieldset>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-5">
 
             <fieldset>
                 <legend>Endereço de Cobranca</legend>
@@ -57,7 +58,7 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="form-group">
-                            <input asp-for="EnderecoCobranca.TextoEndereco" placeholder="Endereço" class="form-control small" />
+                            <input asp-for="EnderecoCobranca.TextoEndereco" maxlength="100" placeholder="Endereço" class="form-control small" />
                         </div>
                     </div>
                     <div class="col-md-3">
@@ -75,7 +76,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="form-group">
-                            <input asp-for="EnderecoCobranca.Estado" placeholder="Estado" class="form-control small" />
+                            <input asp-for="EnderecoCobranca.Estado" placeholder="Estado" id="estado" class="form-control small" />
                         </div>
                     </div>
                 </div>
@@ -99,7 +100,7 @@
 
             </fieldset>
         </div>
-
+        <div class="col-md-1"></div>
         <div class="col-md-3 text-center"></div>
         <div class="col-md-6 text-center">
 
