--- a/src/Vaquinha.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Vaquinha.MVC/Views/Shared/_Layout.cshtml
@@ -16,13 +16,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">vaquinha online</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Doadores" asp-action="Index">Doadores</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Doadores" asp-action="Index">doadores</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Doacoes" asp-action="Create">Doar</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Doacoes" asp-action="Create">doar</a>
                         </li>
                     </ul>
                 </div>
@@ -36,8 +36,8 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2020 - Vaquinha OnLine DIO
+        <div class="container text-center">
+            &copy; 2020 - Vaquinha online netcoreapp3.1
         </div>
     </footer>
 
