Carousel + Correcoes Layout

--- a/src/Vaquinha.MVC/Views/Doadores/Index.cshtml
+++ b/src/Vaquinha.MVC/Views/Doadores/Index.cshtml
@@ -2,7 +2,7 @@
 @using System.Globalization
  
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Doadores";
 }
 
 <div class="text-center">
