--- a/src/Vaquinha.MVC/Views/Doacoes/Create.cshtml
+++ b/src/Vaquinha.MVC/Views/Doacoes/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Vaquinha.Domain.ViewModels.DoacaoViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Doar agora";
 }
 
 
@@ -53,7 +53,7 @@
         <div class="col-md-5">
 
             <fieldset>
-                <legend>Endereço de Cobranca</legend>
+                <legend>Endereço de Cobrança</legend>
 
                 <div class="row">
                     <div class="col-md-9">
