--- a/src/Vaquinha.MVC/Views/Home/Index.cshtml
+++ b/src/Vaquinha.MVC/Views/Home/Index.cshtml
@@ -11,13 +11,13 @@
     <hr />
 
     <p>        
-        <a asp-controller="Doacoes" asp-action="Create" class="btn btn-primary">
-            <span></span>doar agora
+        <a asp-controller="Doacoes" asp-action="Create" class="btn btn-yellow">
+            <span></span>Doar agora
         </a>
     </p>
 
 
-    <table class="table table-striped table-bordered">
+    <table class="table table-bordered">
         <thead>
             <tr>
                 <th>
