--- a/src/Vaquinha.MVC/Views/Doacoes/Create.cshtml
+++ b/src/Vaquinha.MVC/Views/Doacoes/Create.cshtml
@@ -136,7 +136,7 @@
 
     <div class="text-center">
         <div class="form-group">
-            <input type="submit" value="Doar" class="btn btn-primary" />
+            <input type="submit" value="Doar" class="btn btn-yellow" />
         </div>
     </div>
 
