--- a/src/Vaquinha.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Vaquinha.MVC/Views/Shared/_Layout.cshtml
@@ -10,19 +10,21 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-pink border-bottom box-shadow mb-3">
             <div class="container">
 
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">vaquinha online</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">
+                                <img src="/images/vaquinha.png" height="50"/>
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Doadores" asp-action="Index">doadores</a>
+                            <a class="nav-link" asp-area="" asp-controller="Doadores" asp-action="Index">doadores</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Doacoes" asp-action="Create">doar</a>
+                            <a class="nav-link" asp-area="" asp-controller="Doacoes" asp-action="Create">doar</a>
                         </li>
                     </ul>
                 </div>
