Adicionar Vaquinha.Tests.Common

--- a/src/Vaquinha.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Vaquinha.MVC/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">
-                                <img src="/images/vaquinha.png" height="50"/>
+                                <img src="/images/vaquinha.png" height="50" class="vaquinha-logo"/>
                             </a>
                         </li>
                         <li class="nav-item">
