--- a/src/Vaquinha.MVC/wwwroot/css/site.css
+++ b/src/Vaquinha.MVC/wwwroot/css/site.css
@@ -98,3 +98,9 @@ body {
 .pink-leaf {
   background-color: #ffaaab;
 }
+
+.vaquinha-logo{
+  background-color: #ffffff;
+  padding: 2px;
+  border-radius: 20%;
+}
