--- a/src/Vaquinha.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Vaquinha.MVC/Views/Shared/_Layout.cshtml
@@ -4,20 +4,8 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>@ViewData["Title"] - Vaquinha.MVC</title>
-	<link rel="stylesheet"
-		  href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-		  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-		  crossorigin="anonymous" />
+	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="~/css/site.css" />
-
-	<script src="https://code.jquery.com/jquery-3.6.0.js" 
-		integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" 
-		crossorigin="anonymous"></script>
-
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"
-			integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf"
-			crossorigin="anonymous"></script>
-
 </head>
 <body>
 	<header>
@@ -37,6 +25,9 @@
 						<li class="nav-item">
 							<a class="nav-link" asp-area="" asp-controller="Doacoes" asp-action="Create">doar</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link" asp-area="" asp-controller="Causa" asp-action="Index">causas</a>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -50,22 +41,18 @@
 
 	<footer class="border-top footer text-muted">
 		<div class="container text-center">
-			&copy; 2020 - Vaquinha online netcoreapp3.1
+			&copy; @DateTime.UtcNow.Year.ToString() - Vaquinha online netcoreapp3.1
 		</div>
 	</footer>
-
-	<script src="~/lib/jquery/dist/jquery.min.js"></script>
-	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="~/js/site.js" asp-append-version="true"></script>
 
 	@RenderSection("Scripts", required: false)
 	@await Component.InvokeAsync("NToastNotify")
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
-
-	<script src="~/js/jquery.inputmask.bundle.js"></script>
+	<script src="~/js/site.js" asp-append-version="true"></script>
 	<script src="~/js/masks.js"></script>
+	<script src="~/lib/jquery/dist/jquery.min.js"></script>
+	<script src="~/js/jquery.inputmask.bundle.js"></script>
+	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
